:art: Use switch expression and constants in CallMetaDataProviderFactory