@@ -1,8 +1,5 @@
 /*
- * Original Author -> Harry Yang (taketoday@foxmail.com) https://taketoday.cn
- * Copyright © TODAY & 2017 - 2021 All Rights Reserved.
- *
- * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER
+ * Copyright 2017 - 2023 the original author or authors.
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -20,7 +17,6 @@
 
 package cn.taketoday.jdbc.core.metadata;
 
-import java.util.Arrays;
 import java.util.List;
 
 import javax.sql.DataSource;
@@ -37,30 +33,42 @@ import cn.taketoday.logging.LoggerFactory;
  *
  * @author Thomas Risberg
  * @author Juergen Hoeller
+ * @author <a href="https://github.com/TAKETODAY">Harry Yang</a>
  * @since 4.0
  */
 public final class CallMetaDataProviderFactory {
 
+  private static final String DB2 = "DB2";
+  private static final String DERBY = "Apache Derby";
+  private static final String HANA = "HDB";
+  private static final String INFORMIX = "Informix Dynamic Server";
+  private static final String MARIA = "MariaDB";
+  private static final String MS_SQL_SERVER = "Microsoft SQL Server";
+  private static final String MYSQL = "MySQL";
+  private static final String ORACLE = "Oracle";
+  private static final String POSTGRES = "PostgreSQL";
+  private static final String SYBASE = "Sybase";
+
   /** List of supported database products for procedure calls. */
-  public static final List<String> supportedDatabaseProductsForProcedures = Arrays.asList(
-          "Apache Derby",
-          "DB2",
-          "Informix Dynamic Server",
-          "MariaDB",
-          "Microsoft SQL Server",
-          "MySQL",
-          "Oracle",
-          "PostgreSQL",
-          "Sybase"
+  public static final List<String> supportedDatabaseProductsForProcedures = List.of(
+          DERBY,
+          DB2,
+          INFORMIX,
+          MARIA,
+          MS_SQL_SERVER,
+          MYSQL,
+          ORACLE,
+          POSTGRES,
+          SYBASE
   );
 
   /** List of supported database products for function calls. */
-  public static final List<String> supportedDatabaseProductsForFunctions = Arrays.asList(
-          "MariaDB",
-          "Microsoft SQL Server",
-          "MySQL",
-          "Oracle",
-          "PostgreSQL"
+  public static final List<String> supportedDatabaseProductsForFunctions = List.of(
+          MARIA,
+          MS_SQL_SERVER,
+          MYSQL,
+          ORACLE,
+          POSTGRES
   );
 
   private static final Logger logger = LoggerFactory.getLogger(CallMetaDataProviderFactory.class);
@@ -104,34 +112,19 @@ public final class CallMetaDataProviderFactory {
           }
         }
 
-        CallMetaDataProvider provider;
-        if ("Oracle".equals(databaseProductName)) {
-          provider = new OracleCallMetaDataProvider(databaseMetaData);
-        }
-        else if ("PostgreSQL".equals(databaseProductName)) {
-          provider = new PostgresCallMetaDataProvider((databaseMetaData));
-        }
-        else if ("Apache Derby".equals(databaseProductName)) {
-          provider = new DerbyCallMetaDataProvider((databaseMetaData));
-        }
-        else if ("DB2".equals(databaseProductName)) {
-          provider = new Db2CallMetaDataProvider((databaseMetaData));
-        }
-        else if ("HDB".equals(databaseProductName)) {
-          provider = new HanaCallMetaDataProvider((databaseMetaData));
-        }
-        else if ("Microsoft SQL Server".equals(databaseProductName)) {
-          provider = new SqlServerCallMetaDataProvider((databaseMetaData));
-        }
-        else if ("Sybase".equals(databaseProductName)) {
-          provider = new SybaseCallMetaDataProvider((databaseMetaData));
-        }
-        else {
-          provider = new GenericCallMetaDataProvider(databaseMetaData);
-        }
+        CallMetaDataProvider provider = switch (databaseProductName) {
+          case ORACLE -> new OracleCallMetaDataProvider(databaseMetaData);
+          case POSTGRES -> new PostgresCallMetaDataProvider(databaseMetaData);
+          case DERBY -> new DerbyCallMetaDataProvider(databaseMetaData);
+          case DB2 -> new Db2CallMetaDataProvider(databaseMetaData);
+          case HANA -> new HanaCallMetaDataProvider(databaseMetaData);
+          case MS_SQL_SERVER -> new SqlServerCallMetaDataProvider(databaseMetaData);
+          case SYBASE -> new SybaseCallMetaDataProvider(databaseMetaData);
+          default -> new GenericCallMetaDataProvider(databaseMetaData);
+        };
 
         if (logger.isDebugEnabled()) {
-          logger.debug("Using " + provider.getClass().getName());
+          logger.debug("Using {}", provider.getClass().getName());
         }
         provider.initializeWithMetaData(databaseMetaData);
         if (accessProcedureColumnMetaData) {
